kube-manifests/UserManagement-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-shop-web-app
  labels:
    app: web-shop
spec:
  type: NodePort
  selector:
    app: web-shop
  ports:
    - port: 8081
      targetPort: 8081
